--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,13 @@
 author: 
   name: Flávio de Souza
   email: fdsdev@gmail.com
-title: FlavioDeveloper
+title: MyBooksBlog
 email: fdsdev@gmail.com
 
 description: >- # this means to ignore newlines until "baseurl:"
   Just a space for notes, ideas, thoughts and so on.
 
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "/books-blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 
